# scholarscribe

./: .gitignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USER_GUIDE.md  USER_MANUAL.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHIVED-README-for-humanizeai.md  ETHICS.md
public/: app.css
scripts/: build-windows.ps1  first-push.ps1  push-to-github.ps1  release.ps1
src/: App.svelte  main.ts  styles-import.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: abstract_generator.rs  appeal_letter.rs  audit.rs  citation_manager.rs  commands.rs  disclosure.rs  document_stats.rs  docx_reading.rs  lib.rs  main.rs  ollama.rs  persistence.rs  risk_profiler.rs  structure_analyzer.rs  style.rs  style_fingerprint.rs  text_cleaner.rs  voice_consistency.rs  writing_journal.rs
src/components/: AITextCleaner.svelte  About.svelte  AbstractGenerator.svelte  AppealLetter.svelte  Chat.svelte  CitationManager.svelte  DetectorLiteracy.svelte  Disclosure.svelte  DocumentStats.svelte  Models.svelte  PrivacyAudit.svelte  RiskProfiler.svelte  SavedWork.svelte  StructureAnalyzer.svelte  StyleAnalysis.svelte  StyleFingerprint.svelte  VoiceConsistency.svelte  WelcomeTour.svelte  WritingCoach.svelte  WritingJournal.svelte
src/lib/: api.ts  onboarding.ts
