[package]
name = "scholarscribe"
version = "0.1.3"
description = "Privacy-first local LLM writing companion for researchers"
authors = ["Waleed Mandour"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "scholarscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"
sysinfo = "0.32"
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
