[package]
name = "scholarscribe"
version = "0.2.0"
description = "Privacy-first local LLM writing companion for researchers"
authors = ["Waleed Mandour"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "scholarscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"
sysinfo = "0.32"
url = "2"
zip = "2"

# Pin time to a version compatible with cookie 0.18.1.
# time 0.3.52 introduced a breaking change to Parsed::parse() (added a
# required `defaults: Option<Parsed>` argument) in a patch release, which
# breaks cookie 0.18.1's call site at parse.rs:226. Pin to 0.3.36 which
# has the original 1-argument signature. Remove this pin once cookie
# publishes a release compatible with time >= 0.3.52.
time = "=0.3.36"

[features]
custom-protocol = ["tauri/custom-protocol"]
